<resources>
    <string name="app_name">Time Share</string>
    <string name="splash_description">Splash Screen Image</string>
    <string name="splash_screen_message"><font>Share your time with your friends and family with Time Share</font></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <!-- login Activity -->
    <string name="login_failed">"Login failed"</string>
    <string name="login_logo_description">"Time Share is the place to Spend some time with your Friends and Family"</string>
    <string name="login_Hi">Welcome to Time Share &#128522;</string>
    <string name="email">Email</string>
    <string name="continue_">Continue</string>
    <string name="or_login">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="hey_welcome">Hey! Welcome</string>
    <string name="welcome_description">Time to share some thoughts with Time Share.</string>
    <string name="get_started">Get Started</string>
    <string name="already_h_a_a">I already have an account</string>
    <string name="create_an_account">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_something_about_you">Add something about yourself …</string>
    <string name="my_name_is">My Name is .....</string>
    <string name="bio">Bio</string>
    <string name="i_am_a_software_engineer_at_microsoft">I am a Software Engineer at Microsoft…</string>
    <string name="i_am_from">I am from</string>
    <string name="cuttack_odisha">Cuttack, Odisha</string>
    <string name="location">Location</string>
    <string name="cinema">Cinema</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="crypto">Crypto</string>
    <string name="comedy">Comedy</string>
    <string name="current_affair">Current Affair</string>
    <string name="i_am_interested_in">I am Interested in -</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="phone_number_with_country_code">Phone Number with Country Code</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_six_digit_otp_send_on_your_mobile_number">Enter Six Digit OTP send on your Mobile Number</string>
    <string name="password_pattern">Password Pattern | Length >= 8 | a–z | A–Z | 0&#8211;9 | Special Character</string>
    <string name="name">Name</string>
    <string name="camera_photo_click">Camera Photo click</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_photo_from_gallery">Pick Photo from Gallery</string>
    <string name="resend">Resend</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
    <string name="post">Add Post</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="chats">Chats</string>
    <string name="voice_call">Voice Call</string>
    <string name="video_call">Video Call</string>
    <string name="send_message_to_someone">Send Message to Someone</string>
    <string name="active">Active</string>
    <string name="like_count_text">192</string>
    <string name="view_all_35_comments">Comments</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="add_reels">Add Reels</string>
    <string name="add_description">Write some description about the post.\nAdd @ symbol to tag people and # to add hashtags</string>
    <string name="description">Description</string>
    <string name="add_image_or_video">Add Image or Video</string>
    <string name="people_reacted">People Reacted</string>
    <string name="ago">23 min ago</string>
    <string name="no_comments">No Comments</string>
    <string name="loading">Loading…</string>
    <string name="verified_user">Verified User</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="some_error_occurred">Some Error Occurred</string>
    <string name="cancel">Cancel</string>
    <string name="followed_by">Followed by …</string>
    <string name="add_friend">Add Friend</string>
    <string name="un_friend">Unfriend</string>
    <string name="un_follow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="followedTick"><font size="22">&#10004;</font></string>
    <string name="no_posts_yet">No Posts Yet</string>
    <string name="failed_to_fecth_posts">Failed to fetch posts. Please refresh.</string>
    <string name="add_status">Add Status</string>
    <string name="default_notification_channel_id">time_share_notification_channel</string>
    <string name="delete">Delete Message</string>
    <string name="reply_to_message">Reply To Message</string>
    <string name="accept_video_call">Accept Video Call</string>
    <string name="end_video_call">End Video Call</string>
    <string name="switch_on_off_mic">Switch On/Off Mic</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="user_image">User Image</string>
    <string name="new_group">New Group</string>
    <string name="change_group_icon">Change Group Icon</string>
    <string name="group_name">Group Name</string>
    <string name="provide_a_group_subject_and_optional_ngroup_icon">Provide a group subject and optional\ngroup icon</string>
    <string name="participants">Participants</string>
    <string name="next_button">Next Button</string>
    <string name="add_a_group_description">Add a group description</string>
    <string name="profile_selected_as_participant">Profile Selected as Participant</string>
    <string name="save">SAVE</string>
    <string name="opposite_person_profile_image">Opposite Person Profile Image</string>
    <string name="call_from_or_to_opposite_profile_name">Call from or to Opposite Profile Name</string>
    <string name="remote_user_mic_muted">Remote user Mic Muted</string>
    <string name="time_today_yesterday_am_pm">Time-Today-Yesterday am pm</string>
    <string name="add_content">Add Content</string>
    <string name="select_status_background">Select Status Background</string>
    <string name="add_captions">Add Captions</string>
    <string name="upload_status">Upload status</string>
    <string name="add_reel_and_upload">Add Reel and Upload</string>
    <string name="upload_reel">Upload Reel</string>
    <string name="time_share_notifications">Time Share Notifications</string>


</resources>