<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        app:tint="@color/orangePink"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/camera_photo_click" />

    <TextView
        android:id="@+id/cameraTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/camera"
        app:layout_constraintStart_toStartOf="@id/camera"
        app:layout_constraintEnd_toEndOf="@id/camera"
        android:text="@string/camera"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <ImageButton
        android:id="@+id/gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_photo_library_24"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        app:tint="@color/orangePink"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/camera"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/pick_photo_from_gallery" />

    <TextView
        android:id="@+id/galleryTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gallery"
        app:layout_constraintStart_toStartOf="@id/gallery"
        app:layout_constraintEnd_toEndOf="@id/gallery"
        android:text="@string/gallery"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="14sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>