<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.chat.VoiceCallActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/voiceCallingAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_rawRes="@raw/phone_call_animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:elevation="10dp"
        />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/user_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/micOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_mic_24"
            app:tint="@color/white"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/switch_on_off_mic"
            app:backgroundTint="@color/phone_blue"
            android:visibility="gone"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/endCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_call_end_24"
            app:tint="@color/white"
            android:contentDescription="@string/end_video_call"
            app:backgroundTint="@color/red"
            android:visibility="visible"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/acceptCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_call_24"
            app:tint="@color/white"
            android:contentDescription="@string/accept_video_call"
            android:layout_marginStart="40dp"
            android:visibility="visible"
            app:backgroundTint="@color/green"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>